--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- 
+	CopyRight @ 2025 -jeeson -all right reserved
+-->
+
 <head>
 	<title>An example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
