--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- 
-	CopyRight @ 2025 -jeeson -all right reserved
+	CopyRight @ 2025 -jeeson joseph -all right reserved
 -->
 
 <head>
-	<title>An example Website</title>
+	<title>An new Website- after taken over</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content --company has been taken over 
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Jeeson Company 2025</p>
 	</footer>
 </body>
 </html>
