--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 
 <head>
-	<title>Stash change + tittle page work continoued</title>
+	<title>Multiple Stash change </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
